find_package(range-v3 CONFIG REQUIRED)
find_package(fmt CONFIG REQUIRED)
find_package(TBB CONFIG REQUIRED)
function(aoc arg)
# Generic test that uses conan libs
add_executable(${arg} "${arg}.cpp")
find_package(Threads MODULE REQUIRED)
#find_package(folly CONFIG REQUIRED)
#target_link_libraries(my_app PRIVATE Threads::Threads)
#    find_path(CONSTEXPR_INCLUDE_DIRS "cx_algorithm.h")
#    target_include_directories(${arg} PRIVATE ${CONSTEXPR_INCLUDE_DIRS})


#find_path(BOOST_ITERATOR_INCLUDE_DIRS "boost/function_output_iterator.hpp")
target_include_directories(${arg} PRIVATE
          ${CMAKE_CURRENT_SOURCE_DIR} 
          # ${BOOST_ITERATOR_INCLUDE_DIRS} 
           )
target_link_libraries(
  ${arg} PRIVATE project_options project_warnings 
                  range-v3 range-v3-meta range-v3::meta range-v3-concepts fmt::fmt-header-only TBB::tbb
                  Threads::Threads #Folly::folly Folly::folly_deps #Folly::follybenchmark Folly::folly_test_util
                   )

                   endfunction()
#md5
#aoc(aoc150401)
#aoc(aoc160501)
#aoc(aoc160502)
#aoc(aoc161301)
#aoc(aoc161302)
#aoc(aoc161401)
#aoc(aoc161402)
#aoc(aoc161701)
#aoc(aoc161702)

aoc(aoc200101)
aoc(aoc200102)
aoc(aoc200201)
aoc(aoc200202)
aoc(aoc200301)
aoc(aoc200302)
aoc(aoc200401)
aoc(aoc200501)
aoc(aoc200502)
aoc(aoc200601)
aoc(aoc200602)
aoc(aoc200801)
aoc(aoc200802)
aoc(aoc200901)
aoc(aoc200902)
aoc(aoc201001)
aoc(aoc201002)
aoc(aoc201101)
aoc(aoc201102)
aoc(aoc201201)
aoc(aoc201202)
aoc(aoc201301)
aoc(aoc201302)
aoc(aoc201401)
aoc(aoc201402)
aoc(aoc201501)
aoc(aoc201502)
aoc(aoc150101)
aoc(aoc150102)
aoc(aoc150201)
aoc(aoc150202)
aoc(aoc150301)
aoc(aoc150302)
aoc(aoc150501)
aoc(aoc150502)
aoc(aoc150601)
aoc(aoc150602)
aoc(aoc150801)
aoc(aoc150802)
aoc(aoc150901)
aoc(aoc150902)
aoc(aoc151101)
aoc(aoc151301)
aoc(aoc151302)
aoc(aoc151401)
aoc(aoc151501)
aoc(aoc151502)
aoc(aoc151601)
aoc(aoc151602)
aoc(aoc152501)
aoc(aoc151701)
aoc(aoc151801)
aoc(aoc151802)
aoc(aoc151901)
aoc(aoc151902)
aoc(aoc152001)
aoc(aoc152002)
aoc(aoc152101)
aoc(aoc152102)
#aoc(aoc152201)#notworkyet
aoc(aoc151201)
aoc(aoc151202)
aoc(aoc152301)
aoc(aoc152302)
aoc(aoc152401)
aoc(aoc152402)
aoc(aoc160101)
aoc(aoc160102)
aoc(aoc160201)
aoc(aoc160202)
aoc(aoc160301)
aoc(aoc160302)
aoc(aoc160401)
#aoc(aoc160501)
#aoc(aoc160502)
aoc(aoc160601)
aoc(aoc160602)
aoc(aoc160701)
aoc(aoc160702)
aoc(aoc160801)
aoc(aoc160901)
aoc(aoc160902)
aoc(aoc161201)
aoc(aoc161202)
#aoc(aoc161301)
#aoc(aoc161302)
#aoc(aoc161401)
#aoc(aoc161402)
#aoc(aoc161701)
#aoc(aoc161702)
